index-spacing-fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+ #navbar-title {
+	 margin-left: 15px;
+ } 
+ 
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -11285,8 +11289,4 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
-  
-  .navbar-title {
-	  margin-left: 15px;
-  } 
 }
